# libpd-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENCE  README.md  justfile  main.rs  simple.pd
.github/workflows/: ci.yml  main.yml
examples/: README.md  communicate.rs  simple.rs
examples/with_nannou/: bubble.rs  main.rs
examples/with_nannou/patches/: bubble_voice.pd  bubbles.pd  compressor~-help.pd  compressor~.pd
src/: array.rs  atom.rs  convenience.rs  error.rs  functions.rs  gui.rs  helpers.rs  instance.rs  lib.rs  main.rs  mirror.rs  pd.rs  process.rs  receive.rs  send.rs  types.rs
src/functions/: array.rs  gui.rs  process.rs  receive.rs  send.rs
tests/: arrays.rs  general.rs  gui.rs  listening.rs  message_building.rs  pd_global_dollar_zero.rs  pd_global_search_paths.rs  pd_global_state.rs  pd_open_close_patch.rs  pd_subscribe_unsubscribe.rs  process.rs  send_and_receive_after_touch.rs  send_and_receive_bang.rs  send_and_receive_control_change.rs  send_and_receive_double.rs  send_and_receive_float.rs  send_and_receive_list.rs  send_and_receive_midi_byte.rs  send_and_receive_note_on.rs  send_and_receive_pitch_bend.rs  send_and_receive_poly_after_touch.rs  send_and_receive_program_change.rs  send_and_receive_sys_realtime.rs  send_and_receive_sysex.rs  send_and_receive_typed_message.rs  sketch.rs
tests/patches/: array_sketch_pad.pd  echo.pd  sine.pd
tests/pd_binary/mac/Pd-0.51-4.app/Contents/: Info.plist
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tcl.framework/Versions/8.6/: Tcl
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tcl.framework/Versions/8.6/Resources/: Info.plist
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tcl.framework/Versions/8.6/Resources/Scripts/: tm.tcl
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tcl.framework/Versions/8.6/_CodeSignature/: CodeResources
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tcl.framework/Versions/8.6/pkgconfig/: tcl.pc
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tk.framework/Versions/8.6/: Tk
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tk.framework/Versions/8.6/Resources/: Info.plist
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tk.framework/Versions/8.6/Resources/Scripts/: pkgIndex.tcl
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tk.framework/Versions/8.6/_CodeSignature/: CodeResources
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Frameworks/Tk.framework/Versions/8.6/pkgconfig/: tk.pc
tests/pd_binary/mac/Pd-0.51-4.app/Contents/MacOS/: Pd
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Resources/extra/choice/: choice.d_fat
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Resources/extra/pique/: pique.d_fat
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Resources/extra/stdout/: stdout.d_fat
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Resources/po/: af.msg  az.msg  be.msg  bg.msg  de.msg  el.msg  en_ca.msg  es.msg  eu.msg  fr.msg  gu.msg  he.msg  hi.msg  hu.msg  it.msg  pa.msg  pt_br.msg  pt_pt.msg  sq.msg  sv.msg  vi.msg
tests/pd_binary/mac/Pd-0.51-4.app/Contents/Resources/tcl/: pd-gui
tests/pd_binary/mac/Pd-0.51-4.app/Contents/_CodeSignature/: CodeResources
tests/pd_binary/win/pd-0.52-2/doc/1.manual/: 1.introduction.txt
tests/pd_binary/win/pd-0.52-2/font/: Makefile  Makefile.in
tests/pd_binary/win/pd-0.52-2/lib/: tclConfig.sh  tkConfig.sh
tests/pd_binary/win/pd-0.52-2/lib/thread2.8.5/: pkgIndex.tcl
tests/pd_binary/win/pd-0.52-2/po/: af.msg  az.msg  be.msg  bg.msg  de.msg  el.msg  en_ca.msg  es.msg  eu.msg  fr.msg  gu.msg  he.msg  hi.msg  hu.msg  it.msg  pa.msg  pt_br.msg  pt_pt.msg  sq.msg  sv.msg  vi.msg
tests/pd_binary/win/pd-0.52-2/tcl/: Readme.txt  license.txt
