[package]
name = "libpd-rs"
version = "0.1.7"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Safe rust abstractions over libpd"
readme = "README.md"
homepage = "https://github.com/alisomay/libpd-rs"
repository = "https://github.com/alisomay/libpd-rs"
documentation = "https://docs.rs/libpd-rs/0.1.7/libpd_rs/#"
keywords = ["puredata", "libpd", "audio", "midi", "bindings"]
categories = ["multimedia"]
exclude = [
    "tests/*",
    "assets/*",
    "src/main.rs"
]

[dependencies]
libpd-sys = "0.1"
thiserror = "1.0.30"
libffi = "3.0.0"
tempfile = "3.3.0"
embed-doc-image = "0.1.4"
cpal = "0.13"
sys-info = "0.9.1"

[dev-dependencies]
cpal = "0.13"
sys-info = "0.9.1"

# For local development currently,
# [patch.crates-io]
# libpd-sys = { git = "https://github.com/alisomay/libpd-sys" }

# For local development currently,
# [patch."https://github.com/alisomay/libpd-sys"]
# libpd-sys = { path = "../libpd-sys" }

[lib]
name = "libpd_rs"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = false           # Is benchmarked by default.
doc = true             # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.


